# sphyre-rust

./: Cargo.toml  Dockerfile
.github/workflows/: qodana_code_quality.yml
src/: constant.rs  main.rs
src/api/: mod.rs  routes.rs
src/api/handlers/: access_control.rs  consent.rs  credential.rs  identity.rs  mod.rs
src/api/middleware/: auth.rs  logger.rs
src/blockchain/: ethereum.rs  events.rs  mod.rs
src/blockchain/contracts/: access_control.rs  credential.rs  identity.rs  mod.rs
src/config/: settings.rs
src/db/: mongodb.rs
src/models/: access_log.rs  consent.rs  credential.rs  did.rs  mod.rs  smart_contract.rs  user.rs
src/routes/: auth.rs  mod.rs  user.rs
src/services/: access_control.rs  blockchain.rs  consent.rs  credential.rs  identity.rs  mod.rs  storage.rs  zkp.rs
src/utils/: crypto.rs  env.rs  errors.rs  ipfs.rs  jwt.rs  mod.rs
