[package]
name = "ssi-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.6.2", features = ["headers", "multipart"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "cors", "compression-gzip"] }
tokio = { version = "1.32.0", features = ["full"] }
hyper = { version = "1.0.0", features = ["full"] }

# MongoDB
mongodb = "2.7.0"
bson = { version = "2.7.0", features = ["chrono-0_4", "uuid-1"] }

# Serialization/Deserialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# Ethereum/Blockchain integration
ethers = "2.0.10"
web3 = "0.19.0"

# Cryptography and ZKP
base64 = "0.21.4"
ring = "0.17.5"
subtle = "2.5.0"
curve25519-dalek = "4.1.1"
merlin = "3.0.0"
bulletproofs = "4.0.0"
rand = "0.8.5"
sha2 = "0.10.7"
hex = "0.4.3"

# Error handling and utilities
thiserror = "1.0.49"
anyhow = "1.0.75"

# Logging and tracing
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
log = "0.4.20"

# Configuration
config = "0.13.3"
dotenv = "0.15.0"
clap = { version = "4.4.6", features = ["derive"] }

# Async
futures = "0.3.28"
async-trait = "0.1.73"

# Time handling
chrono = { version = "0.4.31", features = ["serde"] }

# UUID
uuid = { version = "1.4.1", features = ["v4", "serde"] }

# Storage
ipfs-api = { version = "0.17.0", features = ["with-hyper-rustls"] }

# JWT
jsonwebtoken = "8.3.0"

# Password hashing
argon2 = "0.5.2"